# kg-idg

./: .gitignore  Jenkinsfile  README.md  download.yaml  generate_subgraphs.py  kg-idg.yaml  make_drugcentral_id_map.py  merge.yaml  multi_indexer.py  neat.yaml  pyproject.toml  requirements.txt  run.py  setup.py  sonar-project.properties  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md  dataset-request.md  feature-request.md
.github/workflows/: main.yml
docs/: genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/modules/: kg_idg.download.html  kg_idg.query.html  kg_idg.transform.html  kg_idg.transform_utils.atc.atc.html  kg_idg.transform_utils.atc.html  kg_idg.transform_utils.drug_central.drug_central.html  kg_idg.transform_utils.gocams.gocams.html  kg_idg.transform_utils.hpa.hpa.html  kg_idg.transform_utils.html  kg_idg.transform_utils.omim.omim.html  kg_idg.transform_utils.ontology.ontology_transform.html  kg_idg.transform_utils.orphanet.orphanet.html  kg_idg.transform_utils.reactome.reactome.html  (+9 more)
kg-idg/: transform.py
kg_idg/: __init__.py  __version__.py  download.py  kg-idg_embeddings_and_plot.ipynb  query.py  transform.py
notebooks/: kg-idg_link_prediction.ipynb
project_name/: __version__.py
sphinx/: conf.py  getting_started.rst  index.rst
templates/: README.build  README.toplevel  kg-idg-neat.yaml
tests/: test_download.py  test_download_from_yaml.py  test_drug_central.py  test_query.py  test_run.py  test_sql_utils.py  test_transform_class.py  test_transform_utils.py  test_version.py
(+173 files in other folders)
